Your descriptive commit message

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 IMAGEKIT_PUBLIC_KEY=public_nFWcs1Xpb6bgV2R3eGLgJBxh6HY=
 IMAGEKIT_PRIVATE_KEY=private_USmDfdXd3RWD157cfzLhAFuz54Q=
 IMAGEKIT_URL_ENDPOINT=https://ik.imagekit.io/bvbmdtn9w
+DATABASE_URL=psql 'postgresql://neondb_owner:npg_bskpP1t4TWGR@ep-wandering-rice-abwgwkrn-pooler.eu-west-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
